<resources>
    <string name="app_name">PawMars</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="notamember">Not a member yet? Sign Up here.</string>
    <string name="alreadyamember">Already a member? Log In here.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last name</string>
    <string name="error_name">Not a valid name.</string>
    <string name="error_email">Not a valid Email.</string>
    <string name="registering">Registering...</string>
    <string name="resentEmail"><u>Resend</u></string>
    <string name="verification_send">We have sent a verification email to</string>
    <string name="click_link">Click the link in your email to get started"</string>
    <string name="i_clicked_link">I clicked the link</string>
    <string name="title_activity_dash_board_avtivity">DashBoardAvtivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="TaC">1. PERSONAL INFORMATION
We are firmly committed to the security and protection of personal information of our Users, their contacts and the Services. The PawMars Privacy Policy describes how we collect, use, share and process personal information and You acknowledge and agree that PawMars may collect, use, share and process personal information as described therein.

2. GRANT OF RIGHTS
Except as otherwise agreed separately in writing between us or as set forth in the API License Addendum and subject to Your compliance with these Terms at all times, PawMars grants You a personal, non-exclusive, non-transferable and limited right to use the Services for Your own personal, non-commercial use. You are not allowed to use the PawMars Services on any device that You do not own or control. You may not copy, decompile, reverse engineer, disassemble, attempt to derive the source code of, modify, or create derivative works of the PawMars software applications, any updates, or any part thereof (except as and only to the extent any foregoing restriction is prohibited by applicable law or to the extent expressly permitted by these Terms or may be permitted by the licensing terms governing use of any open source components included in the PawMars software applications).

You are not granted any right to use PawMars’s name, trademarks or other commercial symbols. All rights not expressly granted to You under these Terms shall be retained by PawMars.

In case You wish to use any part of the Services as a part of Your own application or modify any part of the Services, such use is subject to PawMars’s prior written approval and that You enter into a separate license agreement with PawMars. Any API, commercial or enterprise use of the Services shall be governed by the API License Addendum or such other separate agreement as may be required by PawMars.

3. SUPPORT
PawMars strives to provide adequate and efficient technical support, upgrades and updates for the Services. PawMars shall, however, not be under any obligation to provide support or maintenance for the Services under these Terms and reserves the right to limit or discontinue the support, upgrades and updates provided from time to time.

4. USER OBLIGATIONS AND RESTRICTIONS
You guarantee that any information and other content, such as Your profile information and information regarding the contacts contained in Your device’s phone book, that You may share with PawMars as a User of the Services (together “Content”), to the best of Your knowledge, is correct, not in violation of applicable law, will not corrupt or disrupt the Services, and that you have the right to share the Content with PawMars in order for PawMars to provide the Services and share the Content with other Users.

Except as otherwise agreed separately in writing between us, or as set forth in the API License Addendum, You shall not make any commercial use of the Services or the Content or otherwise transfer for value the Services or the Content. You agree not to challenge PawMars rights in, or otherwise attempt to assert any rights in, the Services or any Content provided by other Users, except those rights explicitly granted under these Terms. You agree to use the Services and Content only as expressly permitted under these Terms.

You agree not to use the Services, Content or information to attempt to circumvent the regular operation of the Services, or reduce the fees or consideration that we may derive from the Services by any means including by creating multiple accounts, redirecting traffic, following other fraudulent or deceptive practices, creating a parallel repository thereof, or seeking to by-pass the Services or compete with us.

Scraping of any information contained in the Services, including any Content and any third party information accessible via the Services, is strictly prohibited.

You may not use the Services or the Content in any way, which is illegal, harmful, or may be considered offensive by PawMars, other Users or third parties. You agree not to exploit the Services or the Content in any unauthorized way whatsoever, including but not limited to, trespassing or burdening network capacity. You further agree not to use our Services or Content in any manner to harass, abuse, stalk, threaten, defame or otherwise infringe or violate the rights of any other party, and You acknowledge and agree that PawMars is not in any way responsible for any such use by You, nor for any harassing, threatening, defamatory, offensive or illegal messages or transmissions that You may receive as a result of using the Services. Notwithstanding any other remedies available to PawMars, You agree that PawMars may suspend or terminate Your use of the Services without notice if You use the Services or the Content in any prohibited manner, and that such use will be deemed a material breach of these Terms.

You may not use or otherwise export or re-export the Services except as authorized by United States law and the laws of the jurisdiction in which the Services were obtained. In particular, but without limitation, the Services may not be exported, re-exported or otherwise made available (a) into any country or region embargoed by the Indian Government, or (b) to anyone on the Indian Treasury Department's Specially Designated Nationals List or the Indian Department of Commerce Denied Persons List or Entity List. By using the Services, you represent and warrant that you are not located in any such country or on any such list. If You obtain access to any subscription based Services in breach of these Terms, we reserve the right to cancel such subscription without any refund of fees in accordance with applicable law.

You may contact PawMars at support@PawMars.com to report any violation or infringement of Your rights by Users of the Services.

5. PROPRIETARY RIGHTS
The Services are protected by copyright laws and international copyright treaties, as well as other intellectual property laws and treaties. PawMars and its licensors shall retain ownership in and to the Services and to all related intellectual property rights, including without limitation copyrights, trademarks, trade names, database rights and patents. You are granted only a limited right to use the Services subject to these Terms and no intellectual property rights are or will deemed to be transferred or licensed to You except as contemplated herein.

6. CONSTITUTIONAL PROTECTION OF PawMars DATABASE
The Swedish Authority for Press, Radio and Television (Sw: myndigheten för press, radio och tv) has issued a Publishing Certificate (Sw: utgivningsbevis) for the PawMars database and website (PawMars, www.PawMars.com) in accordance with the Database Rule of the Swedish Fundamental Law on Freedom of Expression (Sw: 1 kap. 9 § andra stycket yttrandefrihetsgrundlagen). Such Publishing Certificate provides for constitutional protection under the Swedish Fundamental Law on Freedom of Expression for the database, the website and the provision thereof. Responsible Editor is Mr. Alan Mamedi, appointed by True Software Scandinavia AB.

7. UNMODERATED CONTENT
Any Content that is not published by PawMars, i.e. that You or other Users post or communicate directly in or on the Services, including User information, User profile information, status updates and messages sent via the Services may not be previewed by PawMars. Any such unmoderated Content will not be covered by constitutional protection under the Swedish Fundamental Law on Freedom of Expression as per the paragraph above and PawMars will not be liable for the publication of such Content. We will indicate any unmoderated or moderated Content published in or on the Services, for example by using different badges in connection with the publication of such Content.

You are solely liable for any content that You post or communicate directly in or on the Services and You agree to only post or communicate content that:

is true and not false or misleading;
is not likely to be deemed threatening, disparaging, defamatory, pornographic, racially or ethnically offensive, discriminatory, insulting, slanderous or otherwise illegal or inappropriate;
belongs to You, or which You have a right to distribute;
does not constitute an infringement of the intellectual property or privacy rights of any third party;
does not constitute information that you are not legally entitled to distribute (such as insider information or confidential information);
does not contain any unsolicited or unauthorised advertising, promotional material, “junk mail”, “spam”, “chain letters”, “pyramid schemes” or any other form of solicitation; and
does not contain software virus or any other technology that may harm the Services, or the interests or property of our Services or the other Users of the Services.
is accurate, fair, and is not disparaging of us, the Services or other Users. Further, You agree to be fair, accurate and non-disparaging while reporting numbers, leaving comments, suggestions, feedback, testimonials and reviews on or about the Services.
PawMars appreciates the opportunity to be notified of any objectionable user generated content posted or communicated by a User directly in or on the Services. Please contact us at support@PawMars.com to report any objectionable user generated content. PawMars hereby reserves the right in its absolute discretion to remove any user generated content from the Services.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
